Added more to the planning

--- a/proposal.tex
+++ b/proposal.tex
@@ -16,10 +16,11 @@ As it is the flow of energy over time, and it takes energy to change physical va
 \subsection{Topology of a physical system is a combinitoric object}
 Bond graphs and linear graphs represent the same object; both are fundamentally isomorphic except for trivial graphical representation issues
 \subsection{Dissipative port-Hamiltonian systems with junction structure}
-Physical systems are inherently port-Hamiltonian. Energy is either transferred via a junction to another port-Hamiltonian system, or is irreversibly dissipated into the environment as entropy.
+Physical systems are inherently port-Hamiltonian. Energy is either transferred via a junction to another port-Hamiltonian system, or is irreversibly dissipated into the environment as entropy. Thus it is natural to use a method which can easily create a port-Hamiltonian formulation.
 \subsection{Object-oriented modeling}
 Bond graphs are excellent for their object-oriented capabilities; every cut-set creates an object, with the interface being the cut edges.
 \chapter{Planned areas and ideas to explore}
+There appears to be very little published application of bond graphs to aerospace systems. Furthermore, there is little support in current mainstream engineering software for bond graphs. Thus, it is proposed to create a basic bond graph library, and use it to create a proof-of-concept example.
 \section{Development of a model of a two-body system}
 Creation of a two-body system, with gravitational attraction. Base it on numerous free-body mechanical examples. This may provide the opportunity to introduce a new element; a combined inertia and source. 
 \section{Development of a symplectic numerical integrator}
