Talking about energy management

--- a/proposal.tex
+++ b/proposal.tex
@@ -12,7 +12,7 @@ Bond graphs provide a complimentary and alternative view of a system graph. By s
  Instead of this, a bond graph displays a \emph{power port} view of a system; Kirchhoff's effort law applies at a 0 or p-type junction, and Kirchhoff's flow law applies to a 1 or s-type junction. It has been shown that they are basicaly equivalent representations of the same topological system; they are merely different pictorial representations. One is neither better or worse than the other; their strengths and weaknesses are merely the cause of the pictorial depiction used, not the underlying combinitoric system object.
 
 Bond graphs, as opposed to system graphs, are focused on energy flow. Because of this, they appear to be naturally suited to aerospace systems, where management of energy is vital to keeping the systems operating within safe limits. For example, if a spacecraft is re-entering the atmosphere at too high a speed, it will either burn up or bounce off the atmosphere, depending on the angle of entry. If it is too slow, it can fail to reach safe landing areas.
-\section{Fundamental ideas and mathematcal tools}
+\section{Fundamental ideas and mathematical tools}
 Several important mathematical tools shall be taken advantage of. These tools, which should be pretty much always used, seem to be neglected, or at least, not used as often as they should.
 \subsection{All physical variables are tensors}
 Nature has no preferred coordinate system. Thus, every physical quantity is necessarily tensorial in nature. Tensors provide an elegant, coordinate-free modeling style, which can be exploited when it comes time to numerically evaluate them as a desirable coordinate system can be chosen independantly of the modeling phase.
