--- a/proposal.tex
+++ b/proposal.tex
@@ -59,4 +59,7 @@ As two-body systems are usually modeled with point masses, they must be converte
 \chapter{Timeline}
 
 \chapter{Literature review}
+\bibliographystyle{ieeetr}
+\bibliography{bibliography}
+\nocite{*}
 \end{document}
