Started on the literature review. Bleh.

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,6 +59,12 @@ As two-body systems are usually modeled with point masses, they must be converte
 \chapter{Timeline}
 
 \chapter{Literature review}
+\section{Introductory books and surveys of bond graphs and associated mathematics}
+An excellent introductory textbook on bond graph modeling is \cite{Borutzky2010}. It is a coherent collection of a vast amount of results from the scattered papers on bond graph methodology, and written in a very friendly style.
+
+\cite{Birkett1989,Birkett1989a,Birkett1990,Birkett1990a,Birkett2002,Birkett2002a} establish a thorough theoretical justification of the bond graph methodology, especially in the topological and combinitoric sense; \cite{Lamb1997b,Lamb1997,Lamb1997a} establish similiar results but with more focus on physical systems.
+\section{Control in bond graphs}
+
 \bibliographystyle{ieeetr}
 \bibliography{bibliography}
 \nocite{*}
